# datafusion-remote-table

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benchmarks/: Cargo.toml
integration-tests/: Cargo.toml
integration-tests/src/: cmd.rs  docker.rs  lib.rs  utils.rs
integration-tests/testdata/: sqlite_init.sql
integration-tests/testdata/dm/: dm_init.sql  docker-compose.yaml
integration-tests/testdata/gaussdb/: docker-compose.yaml  opengauss_init.sql
integration-tests/testdata/mdb/: README.md
integration-tests/testdata/mysql/: docker-compose.yaml  mysql_init.sql
integration-tests/testdata/opengauss/: docker-compose.yaml
integration-tests/testdata/oracle/: docker-compose.yaml
integration-tests/testdata/oracle/oracle_init/: oracle_init.sql
integration-tests/testdata/postgres/: docker-compose.yaml  postgres_init.sql
integration-tests/tests/: common.rs  dm.rs  gaussdb.rs  mdb.rs  mysql.rs  opengauss.rs  oracle.rs  postgres.rs  sqlite.rs  transform.rs
remote-table/: Cargo.toml
remote-table/examples/: postgres.rs
remote-table/src/: codec.rs  exec.rs  insert.rs  lib.rs  literalize.rs  scan.rs  schema.rs  table.rs  transform.rs  unparse.rs  utils.rs
remote-table/src/connection/: gaussdb.rs  mdb.rs  mod.rs  mysql.rs  odbc_util.rs  opengauss.rs  options.rs  oracle.rs  postgres.rs  sqlite.rs
remote-table/src/connection/dm/: buffer.rs  mod.rs  row.rs
remote-table/src/connection/mdb/: mod.rs  row.rs  schema.rs
