[workspace]
members = ["benchmarks", "integration-tests", "remote-table", "remote-table/gen"]
resolver = "3"

[workspace.dependencies]
datafusion = "52"
datafusion-proto = "52"
arrow = "57"
datafusion-common = "52"
datafusion-execution = "52"
datafusion-expr = "52"
datafusion-physical-plan = "52"
datafusion-physical-expr = "52"
datafusion-catalog = "52"
datafusion-datasource = "53"
datafusion-sql = "52"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.37" }
prost = "0.14"
prost-build = "0.14"
odbc-api = { version = "19", default-features = false, features = ["odbc_version_3_80"]}