[workspace]
members = ["benchmarks", "integration-tests", "remote-table", "remote-table/gen"]
resolver = "3"

[workspace.dependencies]
datafusion = "53"
datafusion-proto = "53"
arrow = "58"
datafusion-common = "53"
datafusion-execution = "53"
datafusion-expr = "53"
datafusion-physical-plan = "53"
datafusion-physical-expr = "53"
datafusion-catalog = "53"
datafusion-datasource = "53"
datafusion-sql = "53"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.39" }
prost = "0.14"
prost-build = "0.14"
odbc-api = { version = "19", default-features = false, features = ["odbc_version_3_80"]}