[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"
publish = false

[features]
opengauss = []

[dependencies]
datafusion-remote-table = { path = "../remote-table", features = ["postgres", "mysql", "oracle", "sqlite", "dm", "mdb", "opengauss"] }
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
uuid = { version = "1.23.2", features = ["v4"] }
rstest = "0.26"
odbc-api = { workspace = true }
env_logger = "0.11"