[package]
name = "datafusion-remote-table"
version = "0.25.0"
edition = "2024"
authors = ["lewiszlw <lewiszlw520@gmail.com>"]
description = "A DataFusion table provider for executing SQL on remote databases"
keywords = ["SQL", "database", "datafusion", "postgres", "mysql"]
license = "MIT"
repository = "https://github.com/systemxlabs/datafusion-remote-table"
readme = "../README.md"

[features]
default = ["postgres", "mysql", "oracle", "sqlite"]
postgres = ["dep:bb8", "dep:bb8-postgres"]
mysql = ["dep:mysql_async"]
oracle = ["dep:bb8", "dep:oracle", "dep:bb8-oracle"]
sqlite = ["dep:rusqlite"]
dm = ["dep:odbc-api"]

[dependencies]
arrow = { workspace = true }
datafusion-common = { workspace = true }
datafusion-execution = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-physical-plan = { workspace = true }
datafusion-physical-expr = { workspace = true }
datafusion-catalog = { workspace = true }
datafusion-datasource = { workspace = true }
datafusion-sql = { workspace = true }
datafusion-proto = { workspace = true }
async-trait = "0.1"
futures = "0.3"
async-stream = { version = "0.3" }
chrono = "0.4"
time = "0.3"
bigdecimal = "0.4"
num-bigint = "0.4"
byteorder = "1.5.0"
serde_json = "1.0"
prost = { workspace = true }
derive-with = "0.7"
derive-getters = "0.5"
itertools = "0.14"
log = { version = "0.4", features = [] }
tokio = { workspace = true, features = ["rt"] }
bb8 = { version = "0.9", optional = true }
uuid = "1.18"
hex = "0.4"

# Postgres
bb8-postgres = { version = "0.9", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"], optional = true }
# MySQL
mysql_async = { version = "0.36", features = [
    "native-tls-tls",
    "chrono",
    "time",
    "bigdecimal",
], optional = true }
# Oracle
oracle = { version = "0.6", optional = true }
bb8-oracle = { version = "0.3", features = ["chrono"], optional = true}
# Sqlite
rusqlite = { workspace = true, features = ["column_decltype", "bundled"], optional = true }
# Dm
odbc-api = { workspace = true, optional = true }
